// Foundation.js
import CardStack from './CardStack.js';

class Foundation {
  constructor() {
    this.suit = '';
    this.cards = new CardStack();
  }

  addCard(card) {
    // Implementa la lógica para agregar cartas a la base aquí.
  }

  // Agrega otros métodos relacionados con la base aquí.
}

// Exporta la clase para que esté disponible en otros archivos.
export default Foundation;
