// Player.js

class Player {
    constructor(name) {
      this.name = name;
      this.score = 0;
    }
  
    playCard() {
      // Implementa la lógica para que el jugador juegue una carta aquí.
    }
  
    // Agrega otros métodos relacionados con el jugador aquí.
  }
  
  // Exporta la clase para que esté disponible en otros archivos.
  export default Player;
  